-Const is the new class for general constants -HelperTime is a class for time operations (atm is a time server implemented) -NumberField and LabeledNumberField is now generic for al numbers -Obfuscator now uses CFB for better security -many helper methods added